--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,14 @@
 [tool.poetry]
 name = "integer-pairing"
-version = "0.1.0"
+version = "0.2.0"
 description = ""
 authors = ["Nejc Ševerkar <nseverkar@gmail.com>"]
+repository = "https://github.com/kuco23/integer-pairing/"
+keywords = ["test", "dependencies", "documentation"]
+classifiers = [
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+]
 
 [tool.poetry.dependencies]
 python = "^3.10"
