--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,17 @@
 [tool.poetry]
 name = "integer-pairing"
-version = "0.2.0"
+version = "0.6.0"
 description = ""
 authors = ["Nejc Ševerkar <nseverkar@gmail.com>"]
 repository = "https://github.com/kuco23/integer-pairing/"
+license = "MIT"
+readme = "README.md"
 keywords = ["test", "dependencies", "documentation"]
 classifiers = [
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
 ]
+include = ["LICENSE"]
 
 [tool.poetry.dependencies]
 python = "^3.10"
